bk_ida/gccida/g0/split_2
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/insn-recog.c:50500:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/insn-recog.c:50501:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2i = ( rtx)x1[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/insn-recog.c:50515:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3b; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/insn-recog.c:50527:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3b; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/insn-recog.c:50540:25: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ( v16 = true_regnum( recog_data_0.operand[0]), v16 != true_regnum( recog_data_0.operand[1])) ) 
                        ^~~~~~~~~~~~
                        recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/insn-recog.c:50540:71: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ( v16 = true_regnum( recog_data_0.operand[0]), v16 != true_regnum( recog_data_0.operand[1])) ) 
                                                                      ^~~~~~~~~~~~
                                                                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/insn-recog.c:50546:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_883( recog_data_0.operand); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/insn-recog.c:50569:17: error: use of undeclared identifier 'recog_data_0'
if ( *( _WORD *)recog_data_0.operand[1] != 61 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/insn-recog.c:50570:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
return gen_split_881( recog_data_0.operand); 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/insn-recog.c:50573:17: error: use of undeclared identifier 'recog_data_0'
if ( *( _WORD *)recog_data_0.operand[1] != 61 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/insn-recog.c:50574:4: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| recog_data_0.operand[1]->fld[0].rtint > 7u 
   ^~~~~~~~~~~~
   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/insn-recog.c:50575:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& ( recog_data_0.operand[1]->fld[0].rtint <= 0x24u || recog_data_0.operand[1]->fld[0].rtint > 0x2Cu) ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/insn-recog.c:50575:56: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& ( recog_data_0.operand[1]->fld[0].rtint <= 0x24u || recog_data_0.operand[1]->fld[0].rtint > 0x2Cu) ) 
                                                       ^~~~~~~~~~~~
                                                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/insn-recog.c:50581:18: error: use of undeclared identifier 'recog_data_0'
v15 = *( _WORD *)recog_data_0.operand[0] == 61 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/insn-recog.c:50582:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
&& ( recog_data_0.operand[0]->fld[0].rtint <= 7u 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/insn-recog.c:50583:4: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| recog_data_0.operand[0]->fld[0].rtint > 0x24u && recog_data_0.operand[0]->fld[0].rtint <= 0x2Cu); 
   ^~~~~~~~~~~~
   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/insn-recog.c:50583:53: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| recog_data_0.operand[0]->fld[0].rtint > 0x24u && recog_data_0.operand[0]->fld[0].rtint <= 0x2Cu); 
                                                    ^~~~~~~~~~~~
                                                    recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/insn-recog.c:50585:18: error: use of undeclared identifier 'recog_data_0'
v15 = *( _WORD *)recog_data_0.operand[0] == 61 && recog_data_0.operand[0]->fld[0].rtint <= 3u; 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/insn-recog.c:50585:51: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v15 = *( _WORD *)recog_data_0.operand[0] == 61 && recog_data_0.operand[0]->fld[0].rtint <= 3u; 
                                                  ^~~~~~~~~~~~
                                                  recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/split_2/src/obj/insn-recog.o] Error 1
